bakkie_derive/tests/ui/fail/app_attribute_on_non_app_type.stderr
error: Parameter with #[app] attribute must be of type App<T>
 --> tests/ui/fail/app_attribute_on_non_app_type.rs:4:30
  |
4 | async fn my_tool(#[app] app: String) -> Result<String, String> {
  |                              ^^^^^^
